# lockedin-backend

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250606_000001_phase1_initial.py  20250606_000002_phase2_core_product_data.py  20250606_000003_phase3_usage_and_analytics.py  20250606_000004_phase4_enforcement_events.py
backend/conf/: gunicorn.conf.py  mkdocs.yml
backend/docs/: .pages  api.md  architecture.md  configuration.md  data-model.md  deployment.md  getting-started.md  index.md  layers.md  roadmap.md  testing.md
backend/docs/stylesheets/: extra.css
backend/scripts/: README.md  init_env.py
backend/src/lockedin_backend/: __init__.py
backend/src/lockedin_backend/api/: __init__.py  router.py
backend/src/lockedin_backend/app/: __init__.py  docs_site.py  main.py
backend/src/lockedin_backend/core/: constants.py  errors.py  serialization.py  settings.py
backend/src/lockedin_backend/db/: base.py  session.py
backend/src/lockedin_backend/models/: __init__.py  accountability_contact.py  enforcement_event.py  preferences.py  profile.py  rule.py  usage_daily_app_aggregate.py  usage_daily_category_aggregate.py  usage_event.py
backend/src/lockedin_backend/repositories/: __init__.py  accountability_repository.py  enforcement_event_repository.py  preferences_repository.py  (+5 more)
backend/tests/: __init__.py  conftest.py  test_accountability.py  test_analytics.py  test_app.py  test_docs.py  test_enforcement.py  test_health.py  test_migrations.py  test_postgres_integration.py  test_preferences.py  test_rule_status.py  test_rules.py  test_services.py  test_usage.py
(+124 files in other folders)
